<resources>
    <string name="app_name">MyBee Corp</string>
    <string name="action_settings">Settings</string>
    <string name="APP_DATA" translatable="false">APP_DATA</string>
    <string name="profile_path" translatable="false">profile_path</string>
    <string name="storage_permission_denied">Read Storage Permission was denied but it is needed for Vehicle Image.</string>
    <string name="ok_caps">OK</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="read_storage_permission_required">Read Storage Permission</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="camera_permission_denied">Camera Permission was denied but it is needed for Vehicle Image.</string>
    <string name="camera">Camera</string>
    <string name="remove">Remove</string>
    <string name="gallery">Gallery</string>
    <string name="yes_remove">Yes, Remove</string>
    <string name="no_don_t">No, Don\'t</string>

    <!-- Strings used for testing -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for assignment -->
    <string name="car_info">Vehicle Info</string>
    <string name="dashboard">DashBoard</string>
    <string name="forgetPW">Forget Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="myProfile">My Profile</string>
    <string name="new_application">New</string>
    <string name="payment">Payment</string>
    <string name="referral">Referral</string>
    <string name="reg">Register</string>
    <string name="reward">Reward</string>

    <string-array name="Type_list">
    <item>Auto</item>
    <item>Mannual</item>
    </string-array>

    <string-array name="cc_list">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
    </string-array>

    <string-array name="state_list">
        <item>State</item>
        <item>Kedah</item>
        <item>Johor</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Penang</item>
        <item>Terengganu</item>
        <item>Selangor</item>
        <item>Negeri Sembilan</item>
        <item>Kuala Lumpur</item>

    </string-array>

    <string-array name="state_list1">
        <item>New State</item>
        <item>Kedah</item>
        <item>Johor</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Penang</item>
        <item>Terengganu</item>
        <item>Selangor</item>
        <item>Negeri Sembilan</item>
        <item>Kuala Lumpur</item>

    </string-array>

    <string-array name="TnC">
        <item>1. Referral Code is unique and not shareable with others.</item>
        <item>2. All rewards are not able to share with others.</item>
        <item>3. Referral rewards must be use before expiry date.</item>
        <item>4. All rewards can be only use in MyBee Insurance application.</item>
    </string-array>

    <string name="address"><u>Jalan Genting Kelang, Setapak, <br />
                                53300 Kuala Lumpur, <br />
        P.O. Box 10979, 50932 Kuala Lumpur, Malaysia.</u>
        </string>

    <string name="phone"><u>(6)03-41450123</u></string>

    <string name="email"><u>info@tarc.edu.my</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newVehicle">New Vehicle</string>
    <string name="vehicleDetail">Vehicle Detail</string>
    <string name="name">Name</string>
    <string name="identity">Identity Type</string>
    <string name="insurance_type">Insurance type</string>
    <string name="phoneNum">Phone Number</string>
    <string name="email1">E-mail</string>
    <string name="state">State</string>
    <string name="address1">Address</string>
    <string name="custID">Customer ID</string>
    <string name="title_activity_add_car">Add_car</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="brand">Brand</string>
    <string name="model">Model Name</string>
    <string name="plateNum">Plate Number</string>
    <string name="year">Year</string>
    <string name="cc">CC</string>
    <string name="type">Type</string>
    <string name="choosePhoto">Choose photos of the vehicle</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="choosepicture">Choose A Photo</string>
    <string name="vehicleBrand">Vehicle Brand</string>
    <string name="cc1">1.0 CC</string>
    <string name="vehicleModelName">Vehicle Model Name</string>
    <string name="auto_mannual">Auto/Mannual</string>
    <string name="save">Save</string>
    <string name="showLess">Show less</string>

    <string name="pay">Pay</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="makePayment">Make Payment</string>
    <string name="payableAmount">Total Payable Amount</string>
    <string name="totalPayment">Total Payment</string>
    <string name="download">Download</string>
    <string-array name="peymentMethod_list">
        <item>Credit/Debit Card</item>
        <item>Pay at 7-Eleven</item>
    </string-array>
    <string name="cardPay">Credit/Debit Card</string>
    <string name="seven_eleven">Pay at 7-Eleven</string>
    <string name="qr_code">qr_code</string>
    <string name="information">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="transactionId">Transaction ID</string>
    <string name="offPayTerm">Show this payment slip at any 7-Eleven Counter and pay the total payable amount in cash.</string>
    <string name="enterCard">Please enter your card number</string>
    <string name="monthYear">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="cardHint">xxxx xxxx xxxx xxxx</string>
    <string name="cvvHint">xxx</string>
    <string name="confirm">CONFIRM</string>
    <string name="ok">ok</string>
    <string name="discount">Discount</string>
    <string name="selectVoucher">Select Voucher</string>
    <string name="marketValue">Vehicle Market Value</string>
    <string name="ncb">NCB discount</string>


</resources>